--- a/CursoVue/bases/index.html
+++ b/CursoVue/bases/index.html
@@ -10,12 +10,23 @@
 	<body>
 		<div id="app" :style="{ background: '#' + color}">
 			<!-- Pasar informacion del componente padre al hijo con props -->
-
 			<!-- 
 				Comunicacion de padres a hijos es por props
 				Comunicacion de hijos a padres es por eventos 
 			-->
-			<coin-detail v-on:change-color="updateColor" :coin="btc"> </coin-detail>
+			<coin-detail v-on:change-color="updateColor" :coin="btc">
+				<!-- Los slots son como los childs en react -->
+				<template v-slot:text>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident culpa quasi mollitia qui nihil sequi
+						ipsam delectus animi? Temporibus commodi illum, fuga vitae cum consequuntur nulla a voluptas illo ipsam.
+					</p>
+				</template>
+
+				<template v-slot:link>
+					<a href="#">Link</a>
+				</template>
+			</coin-detail>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<script src="app.js"></script>
