--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Titlo del posto</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <h1>Aqui va el blog</h1>
