--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui va el blog</h1>
-    <p>Cuerpo ddel blog</p>
+    <div id="container">
+        <div id="post">
+            <h1>Aqui va el blog</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eos eius fuga laborum dignissimos dolorum quis iusto sunt ipsam unde hic reprehenderit dicta quasi minima autem, vitae voluptatum vel voluptatibus?</p>
+        </div>
+    </div>
 </body>
 </html>
