--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -7,6 +7,7 @@
 <body>
     <div id="container">
         <div id="post">
+            <h1>Cabecera</h1>
             <h1>Aqui va el blog</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eos eius fuga laborum dignissimos dolorum quis iusto sunt ipsam unde hic reprehenderit dicta quasi minima autem, vitae voluptatum vel voluptatibus?</p>
         </div>
