Finalizada la cebecera

--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -6,6 +6,12 @@
 </head>
 <body>
     <div id="container">
+        <div class="cabecera">
+            Hyperblog
+            <div class="tagline">
+                Tu blog de cofianza
+            </div>
+        </div>
         <div id="post">
             <h1>Cabecera</h1>
             <h1>Aqui va el blog</h1>
