Agregado el contenido adicional del blog

--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -9,6 +9,8 @@
         <div id="post">
             <h1>Aqui va el blog</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eos eius fuga laborum dignissimos dolorum quis iusto sunt ipsam unde hic reprehenderit dicta quasi minima autem, vitae voluptatum vel voluptatibus?</p>
+            <p>Otro parrafo pero en master</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum quasi aliquam, possimus eaque dicta doloribus sint, fugiat quae ab optio tempora maxime voluptas at error nulla eligendi minus suscipit.</p>
         </div>
     </div>
 </body>
