Cambios en estilo y texto

--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -9,7 +9,7 @@
         <div class="cabecera">
             Hyperblog
             <div class="tagline">
-                Tu blog de cofianza
+                Tu blog de cabecera
             </div>
         </div>
         <div id="post">
