Azul y cabecera maestra

--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -9,7 +9,7 @@
         <div class="cabecera">
             Hyperblog
             <div class="tagline">
-                Tu blog de cofianza
+                Tu blog de maestro
             </div>
         </div>
         <div id="post">
@@ -18,6 +18,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eos eius fuga laborum dignissimos dolorum quis iusto sunt ipsam unde hic reprehenderit dicta quasi minima autem, vitae voluptatum vel voluptatibus?</p>
             <p>Otro parrafo pero en master</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum quasi aliquam, possimus eaque dicta doloribus sint, fugiat quae ab optio tempora maxime voluptas at error nulla eligendi minus suscipit.</p>
+
+
+            <p>Ooooooooooh</p>
         </div>
     </div>
 </body>
