--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -7,6 +7,7 @@
 <body>
     <div id="container">
         <div class="cabecera">
+            <img id="logo" src="imagenes/dragon.png" />
             Hyperblog
             <div class="tagline">
                 Tu blog de maestro
