--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -22,6 +22,9 @@
 
             <p>Ooooooooooh</p>
         </div>
+        <div div="footer">
+            Con amor anita Platzi
+        </div>
     </div>
 </body>
 </html>
