--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Titlo del posto</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
-    <div id="container">
-        <div class="cabecera">
-            <img id="logo" src="imagenes/dragon.png" />
-            Hyperblog
-            <div class="tagline">
-                Tu blog de maestro
-            </div>
-        </div>
-        <div id="post">
-            <h1>Cabecera</h1>
-            <h1>Aqui va el BLOG</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eos eius fuga laborum dignissimos dolorum quis iusto sunt ipsam unde hic reprehenderit dicta quasi minima autem, vitae voluptatum vel voluptatibus?</p>
-            <p>Otro parrafo pero en master</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum quasi aliquam, possimus eaque dicta doloribus sint, fugiat quae ab optio tempora maxime voluptas at error nulla eligendi minus suscipit.</p>
+	<head>
+		<title>Titlo del posto</title>
+		<link rel="stylesheet" href="css/estilos.css" />
+	</head>
+	<body>
+		<div id="container">
+			<div class="cabecera">
+				<img id="logo" src="imagenes/dragon.png" />
+				Hyperblog
+				<div class="tagline">
+					Tu blog de maestro
+				</div>
+			</div>
+			<div id="post">
+				<h1>Cabecera</h1>
+				<h1>Aqui va el BLOG</h1>
+				<img src="images/gatitos.jpg" alt="gatito" />
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eos eius fuga laborum dignissimos dolorum
+					quis iusto sunt ipsam unde hic reprehenderit dicta quasi minima autem, vitae voluptatum vel voluptatibus?
+				</p>
+				<p>Otro parrafo pero en master</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum quasi aliquam, possimus eaque dicta
+					doloribus sint, fugiat quae ab optio tempora maxime voluptas at error nulla eligendi minus suscipit.
+				</p>
 
-
-            <p>Uuuuuuuh</p>
-        </div>
-        <div div="footer">
-            Con amor anita Platzi
-        </div>
-    </div>
-</body>
+				<p>Uuuuuuuh</p>
+			</div>
+			<div div="footer">
+				Con amor anita Platzi
+			</div>
+		</div>
+	</body>
 </html>
