Cambio al tagline

--- a/CursoGit/proyecto1/blog.html
+++ b/CursoGit/proyecto1/blog.html
@@ -10,7 +10,7 @@
 				<img id="logo" src="imagenes/dragon.png" />
 				Hyperblog
 				<div class="tagline">
-					Tu blog de maestro
+					Tu blog de maestro de confianza
 				</div>
 			</div>
 			<div id="post">
@@ -29,7 +29,7 @@
 
 				<p>Uuuuuuuh</p>
 			</div>
-			<div div="footer">
+			<div div="footer red">
 				Con amor anita Platzi
 			</div>
 		</div>
